--- a/config.yaml
+++ b/config.yaml
@@ -56,7 +56,11 @@ data_sources:
     # be the extension. For example,  a file named “content/about.html.erb”
     # will have the identifier “/about/” when turned off, but when turned on
     # it will become “/about.html/” instead.
-    allow_periods_in_identifiers: false
+    allow_periods_in_identifiers: true
+  -
+    # Image gallery data source.
+    type: image_gallery
+    items_root: /
 
 # Configuration for the “watch” command, which watches a site for changes and
 # recompiles if necessary.
